<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scripts"
            android:icon="@drawable/ic_script"
            android:title="@string/nav_scripts" />
        <item
            android:id="@+id/nav_logs"
            android:icon="@drawable/ic_logs"
            android:title="@string/nav_logs" />
        <item
            android:id="@+id/nav_benchmark"
            android:icon="@drawable/ic_benchmark"
            android:title="@string/nav_benchmark" />
        <item
            android:id="@+id/nav_app_manager"
            android:icon="@drawable/ic_app_manager"
            android:title="@string/nav_app_manager" />
        <item
            android:id="@+id/nav_network"
            android:icon="@drawable/ic_network"
            android:title="@string/nav_network" />
    </group>

    <item android:title="@string/nav_settings_group">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>